# temporal-poc

./: .gitignore  README.md  pyproject.toml  run_mockserver.py  run_worker.py  run_workflow.py
temporal_poc/: activities.py  shared.py  workflow.py
