[tool.poetry]
name = "temporal-poc"
version = "0.1.0"
description = ""
authors = ["Michal Jasiorowski <michajas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
temporalio = "^1.11.0"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
